--- a/start_part1.ipynb
+++ b/start_part1.ipynb
@@ -12,6 +12,7 @@
     "from sklearn import metrics\n",
     "import urllib.parse\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
